Closed Bug 498258 Opened 15 years ago Closed 15 years ago

OS X context menu needs a blurred background

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: Dolske, Assigned: mstange)

References

Details

Attachments

(2 files, 2 obsolete files)

Attached image Screenshot
Native OS X context menus (at least in Safari :) are semitransparent and blur the background. Firefox is doing the semitransparency, but not the blurring. This can make make menus surprisingly harder to read, because text and shapes behind the menu can bleed through in a distracting way. See attached screenshot, from hacks.mozilla.org, with Firefox on the left and Safari on the right. The color values of the obscured black/yellow areas is basically identical, the difference is entirely due to blurring.

[I have a suspicion this might already be filed somewhere, but I can't find it.]
Flags: blocking-firefox3.6?
Component: Theme → Widget: Cocoa
Flags: blocking-firefox3.6?
Product: Firefox → Core
QA Contact: theme → cocoa
http://iloveco.de/using-core-image-filters-onunder-a-nswindow/ shows how it's done. There's no public API for it.
Attached patch v1 (obsolete) — Splinter Review
This is on top of bug 527682.
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Attached patch v1 (obsolete) — Splinter Review
Attachment #411439 - Attachment is obsolete: true
Attachment #420084 - Flags: review?(joshmoz)
Comment on attachment 420084 [details] [diff] [review]
v1

I don't like setting up the window filter as part of AdjustWindowShadow(). Seems like you're doing two different things in a function that specifically mentions only one, then cleaning up separately. Please make a function (SetUpWindowFilter) for the filter setup and call it where you want to.
Attachment #420084 - Flags: review?(joshmoz) → review-
Attached patch v2Splinter Review
Attachment #420084 - Attachment is obsolete: true
Attachment #420969 - Flags: review?(joshmoz)
Attachment #420969 - Flags: review?(joshmoz) → review+
This seems to have been checked in; http://hg.mozilla.org/mozilla-central/rev/c17e730faa4c

I'm assuming you just forgot to close this...
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Oops, thanks, how could that happen...
> barryn% hg bisect -b
> The first bad revision is:
> changeset:   37144:c17e730faa4c
> user:        Markus Stange <mstange@themasta.com>
> date:        Wed Jan 13 17:10:25 2010 +0100
> summary:     Bug 498258 - Blur the background behind menus. r=josh

Output of a hg bisect session. On my iBook G4 (running Leopard), recent trunk
nightlies present contextual menus (control-click menus) that look completely
blank (i.e. it looks like either the text is missing, or the text is the same color as
the background). Contextual menu items are still clickable, if you can remember
where they are listed in the menu. I cannot reproduce this on my Intel Mac Mini (2009 model with NVidia chipset), even if I run the Firefox trunk nightly under Rosetta.

(Before I started the hg bisect session, I narrowed it down to 2010-01-13-03
mozilla-central as good and 2010-01-14-03-mozilla-central as bad.)

I guess I should file a new bug, but i want to note this down somewhere until I get around to that.
Depends on: 547723
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: