Bug 498258 - Blur the background behind menus. r=josh